v1.2.0 (v2) gap between notes added summary failed test name fixed js css upd env and base url stored in config impl

--- a/b_logger/templates/styles.css
+++ b/b_logger/templates/styles.css
@@ -386,6 +386,10 @@ main::-webkit-scrollbar-thumb:hover {
 	border-color: var(--primary);
 }
 
+.sidebar .note {
+    margin-bottom: 0.5rem;
+}
+
 /* ===============================
    CARDS & SUMMARY
 ================================= */
